# trans-agentdify

./: .gitignore  GUI_使用说明.md  README.md  demo.py  demo_video_subtitle.py  extract_audio.sh  launch_gui.py  merge_srt.py  mux_sub.py  pyproject.toml  requirements-dev.txt  requirements.txt  stt.py  term_post.py  test_complete_workflow.py  translate.py  tts.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
tests/: test_basic.py
video_subtitle_agent/: __init__.py  cli.py  gui.py
video_subtitle_agent/core/: agent.py  state.py
video_subtitle_agent/nodes/: __init__.py  audio_extraction.py  base.py  speech_to_text.py  subtitle_merge.py  term_processing.py  text_to_speech.py  translation.py  video_muxing.py
video_subtitle_agent/utils/: __init__.py  cache.py  device.py  exceptions.py  file_utils.py
